--- a/index.html
+++ b/index.html
@@ -267,7 +267,13 @@ font-family: "Roboto", sans-serif;
    
   
   <div>
-    <h1> Clarissa <br> Chamberlain </h1>
+    <h2>
+      Project 1
+    </h2>
+    <h1> Mural </h1>
+    <h1>
+      Jimmy's Feed Co.
+    </h1>
   </div>
     
     <p>
