--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@ h1 {
   float: left;
 font-size: 3.25em;
 color: black;
-padding: .25em;
+padding: .375em;
+  position: absolute;
+  left: 2%;
+  top: 1%;
 }
 
 h2 {
