--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@ font-family: "Roboto", sans-serif;
     <h2>
       Project 1
     </h2>
-    <h1> Mural </h1>
-    <h1>
+    <h1> Mural 
+    <br>
       Jimmy's Feed Co.
     </h1>
   </div>
