--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ font-family: "Roboto", sans-serif;
     display: inline;
     height: 600px;
     width: 600px;
-    background-color: #b366ff;
+    background-color: #d9b3ff;
     border-radius: 50%;
     top: -200px;
     left: 925px;
@@ -143,7 +143,7 @@ font-family: "Roboto", sans-serif;
     display: inline;
     height: 800px;
     width: 800px;
-    background-color: #b366ff;
+    background-color: #d9b3ff;
     border-radius: 50%;
     left: -150px;
     top: 500px;
@@ -166,7 +166,7 @@ font-family: "Roboto", sans-serif;
     display: block;
     height: 900px;
     width: 900px;
-    background-color: #d9b3ff;
+    background-color: #6600cc;
     border-radius: 50%;
     right: -5%;
     top: 25%;
