--- a/index.html
+++ b/index.html
@@ -171,7 +171,6 @@ font-family: "Roboto", sans-serif;
     right: -5%;
     top: 25%;
     overflow: hidden;
-    float: right;
   }
   
   li{
@@ -198,7 +197,14 @@ font-family: "Roboto", sans-serif;
   #project_info p{
     position: absolute;
      top: 5px;
-    left: 925px;
+    right: 95px;
+  }
+  
+  #info p{
+    width: 70%;
+    position: absolute;
+    right: -5%;
+    top: 72%;
   }
   
 </style>
