--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@ font-family: "Roboto", sans-serif;
      
   }
   
+  li :active{
+    background-color: #d9b3ff;
+  }
+  
   #project_info p{
     position: absolute;
      top: 5px;
