--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@ font-family: "Roboto", sans-serif;
   <div id="homepage">
     
     <li>
-       <a href="/">Home Page</a>
-       <a href="/">Project 1</a>
+       <a href="">Home Page</a>
+       <a href="https://silentsoundwave17.github.io/Personal-Website---Project-1/">Project 1</a>
        <a href="/">Project 2</a>
        <a href="/">Project 3</a>
     </li>
