--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@ font-family: "Roboto", sans-serif;
       
   }
   
+  
+  .process p{
+    width: 30%;
+    text-align: left;
+    position: absolute;
+    left: 1%;
+    top: 35%;
+  }
  
   
   .circle {
