--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ font-family: "Roboto", sans-serif;
   
   
   .process p{
-    width: 30%;
+    width: 550px;
     text-align: left;
     position: absolute;
     left: 1%;
