--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ font-family: "Roboto", sans-serif;
   
   .process p{
     width: 550px;
+    height: 300px;
     text-align: left;
     position: absolute;
     left: 1%;
