--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ font-family: "Roboto", sans-serif;
   #picture img {
     position: absolute;
     width: 550px;
-    right: .01%;
+    right: 10%;
     top: 40%;
     z-index: 2;
   }
