--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ font-family: "Roboto", sans-serif;
     right: 4%;
     top: 42%;
     z-index: 2;
+    border: 5px black solid;
   }
   
   .circle {
