--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ h1 {
   float: left;
 font-size: 3.25em;
 color: black;
-padding: .375em;
+padding: .750em, .375em, .375em, .375em;
   position: absolute;
   top: 1%;
 }
