--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ font-size: 1.5em;
 background-color: black;
 color: white;
 display: inline-block;
-padding: .750em, .375em, .375em, .375em;
+padding: .375em;
 margin-top: 0;
 margin-bottom: 0;
   }
