--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ font-family: "Roboto", sans-serif;
   #info p{
     width: 35%;
     position: absolute;
-    right: -10%;
+    right: 20px;
     top: 85%;
   }
   
