--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@ font-family: "Roboto", sans-serif;
     right: 95px;
   }
   
-  #info p{
+  #info p {
     width: 35%;
     position: absolute;
-    right: 1px;
+   left: 65%;
     top: 85%;
   }
   
