--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@ font-family: "Roboto", sans-serif;
   
   
   .process p{
+    float: left;
     width: 30%;
     text-align: left;
     position: absolute;
-    left: 1%;
-    top: 35%;
+    top: 55%;
   }
  
   
