--- a/index.html
+++ b/index.html
@@ -47,27 +47,6 @@ display: block;
 display: block;
 }
 
-#homepage p {
-padding: 1em 1em 1em 20px;
-  display: block;
-  position: absolute;
-  text-align: center;
-  width: 500px;
-  float: right;
-  top: 0.01%;
-    left: 51.5%;
-}
-
-
-  #about p {
-    position: absolute;
-    display: block;
-    text-align: left;
-    width: 13%;
-    top: 60%;
-    left: 2%;
-   font-size: .8em;
-  }
 
   
 /* headers */
@@ -114,14 +93,40 @@ font-family: "Roboto", sans-serif;
   }
   
   
-  .process p{
+  .process p {
+    display: block;
     float: left;
     width: 30%;
     text-align: left;
     position: absolute;
     top: 55%;
+    right: 20%;
+    color: red;
+    font-size: 300px;
   }
+  
+  #about p {
+    position: absolute;
+    display: block;
+    text-align: left;
+    width: 13%;
+    top: 60%;
+    left: 2%;
+   font-size: .8em;
+  }
+
  
+  #homepage p {
+padding: 1em 1em 1em 20px;
+  display: block;
+  position: absolute;
+  text-align: center;
+  width: 500px;
+  float: right;
+  top: 0.01%;
+    left: 51.5%;
+}
+
   
   #picture img {
     position: absolute;
