--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@ font-family: "Roboto", sans-serif;
     text-align: left;
     position: absolute;
     top: 55%;
-    right: 20%;
+    left: 500000%;
     color: red;
-    font-size: 300px;
   }
   
   #about p {
@@ -288,7 +287,7 @@ padding: 1em 1em 1em 20px;
     
     </div>
     
-    <div id="process">
+    <div class="process">
         <p>
         I first created a digital prototype of the mural before getting approval to transfer the mural to the wall. 
       </p>
