--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@ font-family: "Roboto", sans-serif;
       
   }
   
+  .process h3 {
+    text-align: left;
+    position: absolute;
+    left: 2%;
+    top: 57%;
+    font-size: 50px;
+  }
+  
   .process p {
     width: 30%;
     text-align: left;
@@ -296,9 +304,15 @@ padding: 1em 1em 1em 20px;
   </div>
   
   
+  
+  
    
     <div id="steps">
     <div class="process">
+      <h3>
+        The <br> process
+      </h3>
+      
         <p>
         I first created a digital prototype of the mural before getting approval to transfer the mural to the wall. 
       </p>
