--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@ padding: 1em 1em 1em 20px;
     width: 400px;
     background-color: #b366ff;
     border-radius: 50%;
-    left: -35px;
-    top: 500px;
+    left: 55px;
+    top: 575px;
     shape-outside: circle (50% 50%);
   }
   
@@ -314,8 +314,11 @@ padding: 1em 1em 1em 20px;
       
         <p>
         I first created a digital prototype of the mural before getting approval to transfer the mural to the wall. <br>
+          <br>
         I then marked off the space, and started sketching the design on the wall 
           in pencil. <br>
+          <br>
+          After finishing the pencil sketch, I used acrylic paint markers to paint over the lines and add detail. 
       </p>
     </div>
       </div>
