--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ padding: 1em 1em 1em 20px;
     <div id="steps">
     <div class="process">
       <h3>
-        The <br> process
+        the <br> Process
       </h3>
       
         <p>
