--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ padding: 1em 1em 1em 20px;
     display: inline;
     height: 400px;
     width: 400px;
-    background-color: #6600cc;
+    background-color:  #d9b3ff;
     border-radius: 50%;
     right: 24%;
     top: 89%;
