--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ font-family: "Roboto", sans-serif;
     width: 30%;
     text-align: left;
     position: absolute;
-    left: 15%;
+    left: 16%;
     top: 60%;
     
 
@@ -182,7 +182,7 @@ padding: 1em 1em 1em 20px;
     display: inline;
     height: 400px;
     width: 400px;
-    background-color:  #d9b3ff;
+    background-color: #d9b3ff;
     border-radius: 50%;
     right: 24%;
     top: 89%;
@@ -318,7 +318,9 @@ padding: 1em 1em 1em 20px;
         I then marked off the space, and started sketching the design on the wall 
           in pencil. <br>
           <br>
-          After finishing the pencil sketch, I used acrylic paint markers to paint over the lines and add detail. 
+          After finishing the pencil sketch, I used acrylic paint markers to paint over the lines and add detail. <br>
+          I would Like to thank the wonderful staff at Jimmy's Feed Co. 
+          for this wonderful opportunity. 
       </p>
     </div>
       </div>
