--- a/index.html
+++ b/index.html
@@ -319,7 +319,8 @@ padding: 1em 1em 1em 20px;
           in pencil. <br>
           <br>
           After finishing the pencil sketch, I used acrylic paint markers to paint over the lines and add detail. <br>
-          I would Like to thank the wonderful staff at Jimmy's Feed Co. 
+          <br>
+          I would like to thank the wonderful staff at Jimmy's Feed Co. 
           for this wonderful opportunity. 
       </p>
     </div>
