--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@ padding: 1em 1em 1em 20px;
   top: 0.01%;
     left: 51.5%;
 }
+  
+  .thanks {
+    position: absolute;
+    width: 95%;
+    
+  }
 
   
   #picture img {
@@ -314,11 +320,18 @@ padding: 1em 1em 1em 20px;
           <br>
           After finishing the pencil sketch, I used acrylic paint markers to paint over the lines and add detail. <br>
           <br>
-          I would like to thank the wonderful staff at Jimmy's Feed Co. 
-          for this wonderful opportunity. 
       </p>
     </div>
       </div>
     
+  
+  
+    <div class="thanks">
+      <h4>
+        I would like to thank the wonderful staff at Jimmy's Feed Co. 
+          for this wonderful opportunity. 
+      </h4>
+  </div>
+  
 </body>
 </html>
