--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@ padding: 1em 1em 1em 20px;
   .thanks {
     position: absolute;
     width: 95%;
-    
+    text-align: center;
+    left: 50%; 
+    top: 110%;
   }
 
   
