--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@ padding: 1em 1em 1em 20px;
 }
   
   .thanks {
-    position: absolute;
     width: 100%;
     text-align: center;
     top: 114%;
+    margin: auto;
   }
 
   
