--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ padding: 1em 1em 1em 20px;
 }
   
   .thanks {
+    position: absolute;
     width: 100%;
     text-align: center;
     top: 114%;
