--- a/index.html
+++ b/index.html
@@ -136,9 +136,8 @@ padding: 1em 1em 1em 20px;
     position: absolute;
     width: 100%;
     text-align: center;
+    left: 25%; 
     top: 114%;
-    margin: auto;
-    background-color: red;
   }
 
   
@@ -331,7 +330,8 @@ padding: 1em 1em 1em 20px;
   
     <div class="thanks">
       <h4>
-        I would like to thank the wonderful staff at Jimmy's Feed Co. for this wonderful opportunity. 
+        I would like to thank the wonderful staff at Jimmy's Feed Co. 
+          for this wonderful opportunity. 
       </h4>
   </div>
   
