--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@ padding: 1em 1em 1em 20px;
           <br>
           After finishing the pencil sketch, I used acrylic paint markers to paint over the lines and add detail. <br>
           <br>
+          Overall, the mural took 3 months to complete. 
       </p>
     </div>
       </div>
@@ -332,7 +333,7 @@ padding: 1em 1em 1em 20px;
     <div class="thanks">
       <h4>
         I would like to thank the wonderful staff at Jimmy's Feed Co. 
-          for this wonderful opportunity. 
+          for this wonderful opportunity, as well as the delicious sandwiches I ate while working. 
       </h4>
   </div>
   
