--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@ padding: 1em 1em 1em 20px;
   .thanks {
     position: absolute;
     width: 100%;
-    text-align: center;
-    left: 25%; 
+    text-align: left;
+    left: 1%; 
     top: 114%;
   }
 
@@ -333,7 +333,7 @@ padding: 1em 1em 1em 20px;
     <div class="thanks">
       <h4>
         I would like to thank the wonderful staff at Jimmy's Feed Co. 
-          for this wonderful opportunity, as well as the delicious sandwiches I ate while working. 
+          for this wonderful opportunity, and for all the delicious sandwiches I ate while working there. 
       </h4>
   </div>
   
