--- a/index.html
+++ b/index.html
@@ -332,8 +332,7 @@ padding: 1em 1em 1em 20px;
   
     <div class="thanks">
       <h4>
-        I would like to thank the wonderful staff at Jimmy's Feed Co. 
-          for this wonderful opportunity, and for all the delicious sandwiches I ate while working there. 
+        I would like to thank the wonderful staff at Jimmy's Feed Co. for this wonderful opportunity, and for all the delicious sandwiches I ate while working there. 
       </h4>
   </div>
   
