--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ padding: 1em 1em 1em 20px;
   
   .thanks {
     position: absolute;
-    width: 100%;
+    width: 1024px;
     text-align: left;
     left: 1%; 
     top: 114%;
