--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@ padding: 1em 1em 1em 20px;
     <li>
        <a href="https://silentsoundwave17.github.io/Personal_Website/">Home Page</a>
        <a href="https://silentsoundwave17.github.io/Personal-Website---Project-1/">Project 1</a>
-       <a href="/">Project 2</a>
-       <a href="/">Project 3</a>
+       <a href="https://silentsoundwave17.github.io/Portfolio_Page_3/">Project 2</a>
+       <a href="https://silentsoundwave17.github.io/Portfolio_Page_3/">Project 3</a>
     </li>
     
 
