--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ padding: 1em 1em 1em 20px;
     
     <div id="project_info">
       <p>
-        A locally-run sandwich store in Waterloo comissioned me to design and paint a mural on a wall inside of their store. <br> 
+        A locally-run sandwich store in Waterloo commissioned me to design and paint a mural on a wall inside of their store. <br> 
       </p>
       
     </div>
@@ -326,7 +326,9 @@ padding: 1em 1em 1em 20px;
   
     <div class="thanks">
       <h4>
-        I would like to thank the wonderful staff at Jimmy's Feed Co. for this wonderful opportunity, and for all the delicious sandwiches I ate while working there. 
+        I would like to thank the wonderful staff at Jimmy's Feed Co. for this wonderful opportunity, and for all the delicious sandwiches I ate while working there. <br>
+        <br>
+        I would also like to personally thank all of the customers who gave helpful suggestions and ideas as to what to add. Your endless support and assistance helped me through this entire process. 
       </h4>
   </div>
   
