--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ margin-bottom: 0;
   }
   
   
-  h1 , li , h2 {
+  h1 , li , h2, h3 {
 font-family: "Roboto", sans-serif;
 }
 
@@ -231,6 +231,19 @@ padding: 1em 1em 1em 20px;
     top: 85%;
   }
   
+  .funfact h3 {
+    font-weight: 500;
+    position: absolute;
+    top: 105%;
+    right: 15%;
+}
+  
+  .funfact h4 {
+    position: absolute;
+    top: 108%;
+    right: 15%;
+  }
+  
 </style>
   
 </head>
@@ -319,6 +332,11 @@ padding: 1em 1em 1em 20px;
         <br>
         I would also like to personally thank all of the customers who gave helpful suggestions and ideas as to what to add. Your endless support and assistance helped me through this entire process. 
       </h4>
+  </div>
+  
+  <div class="funfact">
+    <h3> Fun Fact:</h3>
+    <h4> My mural has been featured in the moblie game "Pokemon Go"</h4>
   </div>
   
 </body>
