--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ padding: 1em 1em 1em 20px;
   .funfact h3 {
     font-weight: 500;
     position: absolute;
-    top: 115%;
+    top: 117%;
     right: 25%;
 }
   
@@ -242,7 +242,7 @@ padding: 1em 1em 1em 20px;
     position: absolute;
     top: 120%;
     right: 7%;
-    width: 15%;
+    width: 23%;
   }
   
 </style>
@@ -337,7 +337,7 @@ padding: 1em 1em 1em 20px;
   
   <div class="funfact">
     <h3> Fun Fact:</h3>
-    <h4> My mural has been featured in the moblie game "Pokemon Go"</h4>
+    <h4> My mural is featured in the mobile game "Pokemon Go"</h4>
   </div>
   
 </body>
