--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@ padding: 1em 1em 1em 20px;
     position: absolute;
     top: 117%;
     right: 25%;
+    background-color: black;
+    color: white;
+    padding: 10px;
 }
   
   .funfact h4 {
