--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@ margin-bottom: 0;
 font-family: "Roboto", sans-serif;
 }
 
-  
-    
-   
+
   
   .process h3 {
     text-align: left;
@@ -229,6 +227,7 @@ padding: 1em 1em 1em 20px;
     position: absolute;
    left: 61.5%;
     top: 85%;
+    font-weight: 600;
   }
   
   .funfact h3 {
