--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@ font-family: "Roboto", sans-serif;
     left: 2%;
     top: 57%;
     font-size: 50px;
+    background-color: black;
+      color: white;
+    padding: 10px;
   }
   
   .process p {
