--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ font-family: "Roboto", sans-serif;
     padding: 10px;
   }
   
-  .process p {
+  .process h4 {
     width: 38%;
     text-align: left;
     position: absolute;
@@ -116,7 +116,7 @@ padding: 1em 1em 1em 20px;
     left: 51.5%;
 }
   
-  .thanks {
+  .thanks h5 {
     position: absolute;
     width: 1024px;
     text-align: left;
@@ -318,7 +318,7 @@ padding: 1em 1em 1em 20px;
         the <br> Process
       </h3>
       
-        <p>
+        <h4>
         I first created a digital prototype of the mural before getting approval to transfer the mural to the wall. <br>
           <br>
         I then marked off the space, and started sketching the design on the wall 
@@ -327,18 +327,18 @@ padding: 1em 1em 1em 20px;
           After finishing the pencil sketch, I used acrylic paint markers to paint over the lines and add detail. <br>
           <br>
           Overall, the mural took 3 months to complete. 
-      </p>
+      </h4>
     </div>
       </div>
     
   
   
     <div class="thanks">
-      <h4>
+      <h5>
         I would like to thank the wonderful staff at Jimmy's Feed Co. for this wonderful opportunity, and for all the delicious sandwiches I ate while working there. <br>
         <br>
         I would also like to personally thank all of the customers who gave helpful suggestions and ideas as to what to add. Your endless support and assistance helped me through this entire process. 
-      </h4>
+      </h5>
   </div>
   
   <div class="funfact">
