--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@ padding: 1em 1em 1em 20px;
   .funfact h4 {
     position: absolute;
     top: 114%;
-    right: 1%;
+    right: 0.5%;
     width: 23%;
-    padding: 10px;
+    float: right;
   }
   
 </style>
